--- a/src/css/container.css
+++ b/src/css/container.css
@@ -4,6 +4,8 @@
   max-width: 375px;
   margin: 0 auto;
   padding: 0 16px;
+  text-align: center;
+  margin-top: 36px;
 }
 /* Styles for Tablet devices */
 @media only screen and (min-width: 768px) {
